# px3se_linux_4.4

./: .qmake.stash  CMakeLists.txt  Makefile  OWNERS  README  README.chromium  S01_audio_ser_init  adbd.rvmk  aud_fun.c  aud_fun.h  audioservice.c  devices.c  file_sync_service.c  global_value.cpp  global_value.h  klog.c  libcutils.rvmk  liblog.rvmk  list_file.c  list_file.h  log.h  mainwindow.cpp  mainwindow.h  message_queue.c  message_queue.h  mk.sh  power_manager.c  power_service.c  readme.txt  res_setting.qrc  rk_make.sh  services.c  settings.pro  thermal.c
LICENSE/: README
api/: PlayBackService.c
base/: absframelessautosize.cpp  base.pri  basepushbutton.cpp  basepushbutton.h  basetablewidget.cpp  cmessagebox.cpp  cpushbutton.cpp  cswitchbutton.cpp  switchbutton.cpp  switchbutton.h
bluetooth/: bluetooth.pri  bluetoothdevicetable.cpp  bluetoothdevicetable.h  bluetoothscannerwidget.cpp  bluetoothscannerwidget.h  bluetoothscannerwidgets.cpp  bluetoothscannerwidgets.h  bluetoothwidgets.cpp  bluetoothwidgets.h  pairedinformationdialog.cpp  pairedinformationdialog.h
brightness/: brightness.cpp  brightness.h  brightness.pri  brightness.ui  brightnesswidgets.cpp  brightnesswidgets.h
calendar/: calendar.pri  calendarwidgets.cpp  calendarwidgets.h  widget.cpp  widget.h  widget.ui
conf/: settings.json
configs/: rockchip_px3se_defconfig  saintway-px3se_defconfig
cpu.m/: Makefile  memcpy.c  memcpy_test.c  ops.c  ptrchase.c  rgbn.c
devices.m/: Makefile  bootcachetest.c  dm-bootcache.h  ssdwritetest.c
fcalls.d/: Makefile  rw.c
file.m/: Makefile  af.c  bigfile.c  (+69 more)
(+188 files in other folders)
